db-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db-api
  name: db-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/progetto2-my-network: "true"
        io.kompose.service: db-api
    spec:
      containers:
        - image: k8sapi
          name: db-api
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
