db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/progetto2-my-network: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_DATABASE
              value: db
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: simone
          image: k8sdb
          name: db
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: my-volume
      restartPolicy: Always
      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: my-volume
status: {}
