website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: website
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: website
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/progetto2-my-network: "true"
        io.kompose.service: website
    spec:
      containers:
        - image: k8swebsite
          name: website
          imagePullPolicy: Never
          ports:
            - containerPort: 5001
          resources: {}
      restartPolicy: Always
status: {}
